[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[features]
profiled = []

[dependencies]
allocator-api2 = "0.2.0"
clap = { version = "4.5.53", features = ["derive"] }
cmov = "0.4.3"
hashbrown = { version = "0.16", features = ["allocator-api2"] }
itertools = "0.14.0"
libc = "0.2.178"
memmap2 = "0.9.9"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }

[profile.profiled]
inherits = "release"
opt-level = 3
debug = true
strip = "none"
lto = "off"
incremental = false

[profile.release]
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"
panic = "abort"
